<resources>
    <string name="app_name">siloam-caregiver</string>
    <string name="no_internet_connection">Please check your internet connection!</string>
    <string name="hospital_unit">Hospital Unit</string>
    <string name="caregiver">Caregiver</string>
    <string name="search_patient_name">Search by patient name</string>
    <string name="permission_to_gallery">Please give permission to access gallery</string>
    <string name="info_group">Info Group</string>
    <string name="phone_title">Phone</string>
    <string name="room">Room</string>
    <string name="payer_title">Payer</string>
    <string name="view_medical_record">View Medical Record</string>
    <string name="gambar_document"><![CDATA[Gambar & Dokumen]]></string>
    <string name="participants">%1$s Participants</string>
    <string name="group_role">●  %1$s</string>
    <string name="sub_header_group_detail">MR NO: %1$s | ADMISSION NO: %2$s</string>
    <string name="picture_document"><![CDATA[Image & Document]]></string>
    <string name="picture">Image</string>
    <string name="document">Document</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="select_hospital_units">Select Hospital Units</string>
    <string name="filter">Filter</string>
    <string name="ward">Ward</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="empty_chat">Sorry, you don\'t have chat</string>
    <string name="medical_record">Medical Record</string>
    <string name="share">Share</string>
    <string name="share_message">Share this link to chat room ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel\n</string>
    <string name="link">Go to link - %1$s</string>
    <string name="please_select_unit_before_ward">Please select unit first before selecting ward</string>
    <string name="unit_semicol">Unit :</string>
    <string name="wards_semicol">Wards :</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="admission_history">Admission History</string>
    <string name="history_chat">History Chat</string>
    <string name="admission_history_empty">The patient does not have a history of admission.</string>
    <string name="chat_room_closed">This room chat is closed. The patient has been discharged</string>
    <string name="attachment">Attachment</string>
    <string name="no_admission_history">No Admission History\n</string>
    <string name="sender_delete">Message deleted</string>
    <string name="own_message_deleted">You delete this message.</string>
    <string name="no_messages">No Messages</string>
    <string name="x_unread_message">%1$s Unread Message</string>
    <string name="deleted_message_desc">Pesan ini telah dihapus</string>
    <string name="rmo_ward">RMO Ward</string>
    <string name="add_rmo_caregiver">ADD RMO</string>
    <string name="edit_rmo_caregiver">EDIT RMO</string>
    <string name="title_add_rmo">%1$s/%2$s RMO Selected</string>
    <string name="search_doctor_name">Search doctor by name</string>
    <string name="save_rmo">Save</string>
    <string name="save_confirmation_rmo_caregiver">Save Confirmation</string>
    <string name="success_add_rmo_caregiver">Success add rmo ward.</string>

</resources>
