<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patientlist.rmo.AddRmoFragment">

    <LinearLayout
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_save_rmo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout_add_rmo_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:elevation="@dimen/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_add_rmo_list"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                android:theme="@style/Widget.App.Toolbar.MenuButton"
                app:navigationIcon="@drawable/ic_arrow_back_primary"
                app:title="@string/title_add_rmo"
                app:titleMarginTop="@dimen/small_fit" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:hint="@string/search_doctor_name"
            app:boxStrokeColor="@color/colorPrimaryCaregiver"
            app:endIconDrawable="@drawable/ic_search_text_input"
            app:endIconMode="custom"
            app:endIconTint="@color/til_endicon_color"
            app:hintTextColor="@color/colorPrimaryCaregiver">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_search_patient_name_caregiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/very_tiny"
            android:layout_marginTop="@dimen/medium"
            android:background="@color/colorBlack12Caregiver" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_add_rmo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_add_rmo" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_rmo"
        style="@style/Widget.CoreTheme.ButtonRadius"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:paddingTop="@dimen/small_fit"
        android:paddingBottom="@dimen/small_fit"
        android:text="@string/save_rmo"
        android:layout_marginBottom="@dimen/medium"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteCaregiver"
        android:textSize="@dimen/text_small"
        app:backgroundTint="@color/colorSecondaryBaseCaregiver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>