<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_caregiver_dashboard"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteCaregiver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar_caregiver"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhiteCaregiver"
            android:theme="@style/Widget.App.Toolbar.MenuButton"
            app:menu="@menu/top_app_bar_caregiver_dashboard"
            app:navigationIcon="@drawable/ic_close_caregiver"
            app:title="@string/caregiver"
            app:titleMarginTop="@dimen/small_fit" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_chip_caregiver_dashboard"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/medium"
        android:paddingVertical="@dimen/medium"
        app:chipBackgroundColor="@color/colorPrimaryLightCaregiver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout_caregiver_dashboard">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chip_patient_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/chip_filter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ib_filter_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:background="@color/white"
            android:src="@drawable/ic_filter_patient_list"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:hint="@string/search_patient_name"
        app:endIconDrawable="@drawable/ic_search_text_input"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_chip_caregiver_dashboard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_search_patient_name_caregiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_patient_list_caregiver"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        tools:listitem="@layout/item_patient_list_caregiver" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading_patient_list"
        android:layout_width="@dimen/very_large_fit"
        android:layout_height="@dimen/very_large_fit"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ill_empty_state"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/empty_chat"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_empty" />

</androidx.constraintlayout.widget.ConstraintLayout>
